# games

./: .gitignore  CMakeLists.txt  readme.md
src/: CMakeLists.txt
src/chess/: CMakeLists.txt  main.cpp
src/games/: CMakeLists.txt
src/games/shape_war/: CMakeLists.txt  game.hpp  main.cpp
src/games/simple_shoot_game/: CMakeLists.txt
src/games/simple_shoot_game/ecs/: components.hpp  config.hpp  entity.hpp
src/games/simple_shoot_game/utils/: vector2.hpp
src/shape_war/: CMakeLists.txt  game.hpp  main.cpp  shape_war_t.hpp
src/shape_war/ecs/: config.hpp  entity_manager.hpp
src/shape_war/ecs/components/: base_component_t.hpp  collision_t.hpp  input_t.hpp  lifespan_t.hpp  placement_t.hpp  score_t.hpp  shape_t.hpp
src/shape_war/ecs/entity/: bullet_t.hpp  config.hpp  enemy_t.hpp  entity.hpp  entity_manager.hpp  player_t.hpp  special_weapon_t.hpp
src/shape_war/ecs/system/: collide_t.hpp  display_t.hpp  life_t.hpp  movement_t.hpp  spawner_t.hpp  system_t.hpp  user_input_t.hpp
